[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/TitleScreen/background.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TitleScreen/StartGame.png" type="Texture" id=2]
[ext_resource path="res://Sprites/TitleScreen/Start.png" type="Texture" id=3]
[ext_resource path="res://Sprites/TitleScreen/select.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://Sprites/TitleScreen/pixil-frame-0.png" type="Texture" id=6]
[ext_resource path="res://Scenes/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/Pixel Art Forest - Background.wav" type="AudioStream" id=8]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.166776, 0.166724 )
texture = ExtResource( 1 )
centered = false

[node name="Label" type="Label" parent="."]
margin_top = 165.0
margin_right = 320.0
margin_bottom = 184.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0.678431, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.921569, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Version 2.8                       ProcyonGaming Studio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 110.0
margin_top = 20.0
margin_right = 210.0
margin_bottom = 160.0
size_flags_horizontal = 4
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 132.0
size_flags_horizontal = 5

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 13.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 100.0
margin_bottom = 32.0
rect_clip_content = true
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="Start" type="TouchScreenButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
normal = ExtResource( 2 )

[node name="Exit" type="TouchScreenButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
position = Vector2( 0, 17 )
normal = ExtResource( 3 )

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = -23.0
margin_top = -17.0
margin_right = 334.0
margin_bottom = 193.0

[node name="BackgroundMusic1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
